[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "halfspace-optimizer"
version = "0.1.0"
authors = [
  { name="Joshua Ivanhoe", email="joshua.k.ivanhoe@gmail.com" },
]
description = "Cutting-plane solver for mixed-integer convex optimization problems"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/joshivanhoe/halfspace"
Issues = "https://github.com/joshivanhoe/halfspace/issues"
